; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/port/extr_win32_sema.c_PGSemaphoreUnlock.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/port/extr_win32_sema.c_PGSemaphoreUnlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FATAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [43 x i8] c"could not unlock semaphore: error code %lu\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PGSemaphoreUnlock(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @ReleaseSemaphore(i32 %3, i32 1, i32* null)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %11, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* @FATAL, align 4
  %8 = call i32 (...) @GetLastError()
  %9 = call i32 @errmsg(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = call i32 @ereport(i32 %7, i32 %9)
  br label %11

11:                                               ; preds = %6, %1
  ret void
}

declare dso_local i32 @ReleaseSemaphore(i32, i32, i32*) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errmsg(i8*, i32) #1

declare dso_local i32 @GetLastError(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
